--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -3,6 +3,7 @@
     width: 18%;
     flex-direction: column;
     border-right: 1px solid gainsboro;
+    box-shadow: 0 1px 2px;
 }
 
 .sidebar-category-title{
