--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -10,7 +10,7 @@
 }
 
 .modal-container{
-    min-width: 40%;
+    width: 25%;
     min-height: 20%;
     background-color: white;
     border-radius: 6px;
